Fixed missing z-index causing import to cloud not clickable for certain browser window sizes..

--- a/css/style.css
+++ b/css/style.css
@@ -11820,6 +11820,7 @@ table {
     left: 300px;
     bottom: 50px;
     padding: 34px 0 0 0;
+    z-index: 1400;
 }
 .button.download-button.down-arrow, .button.download-button.to-clouddrive {
     background-image: url(../images/mega/download-sprite-v6.png);
